# genai-intro

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  01_example_pdf_qa.py  02_example_pdf_and_url_qa.py  03_example_structured_output.py  04_example_chat_memory_and_grades.py  05_example_rag_agent_graph.py  06_example_structured_vision_understanding.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: anthropic_provider.py  model_provider.py  nvidia_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
